Task-8: Add UpdateJourney handler for gRPC service
Task-8: Add UpdateJourney handler for gRPC service
