# pkg/ova-journey-api/ova-journey-api.pb.gw.go
@@ -239,6 +239,40 @@ func local_request_JourneyApiV1_MultiCreateJourneyV1_0(ctx context.Context, mars
 
 }
 
+func request_JourneyApiV1_UpdateJourneyV1_0(ctx context.Context, marshaler runtime.Marshaler, client JourneyApiV1Client, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateJourneyRequestV1
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.UpdateJourneyV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_JourneyApiV1_UpdateJourneyV1_0(ctx context.Context, marshaler runtime.Marshaler, server JourneyApiV1Server, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateJourneyRequestV1
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.UpdateJourneyV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterJourneyApiV1HandlerServer registers the http handlers for service JourneyApiV1 to "mux".
 // UnaryRPC     :call JourneyApiV1Server directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -357,6 +391,29 @@ func RegisterJourneyApiV1HandlerServer(ctx context.Context, mux *runtime.ServeMu
 		}
 
 		forward_JourneyApiV1_MultiCreateJourneyV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("PUT", pattern_JourneyApiV1_UpdateJourneyV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ova.journey.api.JourneyApiV1/UpdateJourneyV1", runtime.WithHTTPPathPattern("/v1/journeys"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_JourneyApiV1_UpdateJourneyV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_JourneyApiV1_UpdateJourneyV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -501,6 +558,26 @@ func RegisterJourneyApiV1HandlerClient(ctx context.Context, mux *runtime.ServeMu
 
 	})
 
+	mux.Handle("PUT", pattern_JourneyApiV1_UpdateJourneyV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ova.journey.api.JourneyApiV1/UpdateJourneyV1", runtime.WithHTTPPathPattern("/v1/journeys"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_JourneyApiV1_UpdateJourneyV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_JourneyApiV1_UpdateJourneyV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -514,6 +591,8 @@ var (
 	pattern_JourneyApiV1_RemoveJourneyV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "journeys", "journey_id"}, ""))
 
 	pattern_JourneyApiV1_MultiCreateJourneyV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "journeys", "multi"}, ""))
+
+	pattern_JourneyApiV1_UpdateJourneyV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "journeys"}, ""))
 )
 
 var (
@@ -526,4 +605,6 @@ var (
 	forward_JourneyApiV1_RemoveJourneyV1_0 = runtime.ForwardResponseMessage
 
 	forward_JourneyApiV1_MultiCreateJourneyV1_0 = runtime.ForwardResponseMessage
+
+	forward_JourneyApiV1_UpdateJourneyV1_0 = runtime.ForwardResponseMessage
 )
